Теперь основная директория создается сама, если ее нет